Trying to fix images not showing in Heroku

--- a/app/assets/stylesheets/friends.scss
+++ b/app/assets/stylesheets/friends.scss
@@ -47,7 +47,7 @@ header {
   }
 
   a.fork_me {
-    background: url(github.png) no-repeat;
+    background: image_url("github.png") no-repeat;
     padding-left: 25px;
     position: absolute;
     top: 0px;
@@ -61,7 +61,7 @@ header {
 }
 
 div#main-wrap {
-  background: url(shadowing.png) no-repeat top center;
+  background: image_url("shadowing.png") no-repeat top center;
   padding-top: 40px;
   margin: 0 auto;
   width: 1000px;
